feat: added promise and async awit
